# src/app/Http/Controllers/Donation/DeleteController.php
@@ -1,0 +1,70 @@
+<?php
+
+namespace App\Http\Controllers\Donation;
+
+use App\Http\Controllers\Controller;
+use App\Http\Services\DonationService;
+
+class DeleteController extends Controller
+{
+    private $donationService;
+
+    public function __construct(DonationService $donationService)
+    {
+        $this->donationService = $donationService;
+    }
+
+/**
+ * @OA\Delete(
+ *     path="/api/donation/delete/{id}",
+ *     tags={"Donation"},
+ *     summary="Delete Donation",
+ *     description="Returns donation data",
+ * security={
+     *           {"bearerAuth": {}}
+     *       },
+ * @OA\Parameter(
+ *          name="id",
+ *          description="Donation id",
+ *          required=true,
+ *          in="path",
+ *          @OA\Schema(
+ *              type="string"
+ *          )
+ *      ),
+ *     @OA\Response(
+ *          response=200,
+ *          description="Successful operation",
+ *          @OA\MediaType(
+*              mediaType="application/json",
+*           ),
+*       ),
+*      @OA\Response(
+*          response=400,
+*          description="Bad Request"
+*      ),
+*      @OA\Response(
+*          response=401,
+*          description="Unauthenticated",
+*      ),
+*      @OA\Response(
+*          response=403,
+*          description="Forbidden"
+*      ),
+*      @OA\Response(
+*          response=422,
+*          description="Unprocessable Content"
+*      )
+* )
+*/
+    public function delete($id)
+    {
+        $donation = $this->donationService->delete($id);
+
+        return response()->json([
+            'status' => 'success',
+            'data' => $this->donationService->getDonationResource($donation),
+        ], 200);
+
+    }
+}
